# framelib

./: CODE_ARCHITECTURE.md  CONTRIBUTING.md  README.md  example.py  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
docs/: CODE_ARCHITECTURE.md  _examples.py  todo.md
myproject/: analytics_db.ddb  raw_sales.csv
src/framelib/: __init__.py  _columns.py  _const.py  _core.py  _duckdb.py  _enums.py  _filehandlers.py  _files.py  _folder.py  _lib.py  _misc.py  _plots.py  _queries.py  _schema.py  _schemas.py  _tree.py  _types.py  _windows.py
src/framelib/_columns/: __init__.py  _base.py  _basictypes.py  _composedtypes.py
src/framelib/_database/: __init__.py  _constraints.py  _database.py  _main.py  _queries.py  _schema.py  _table.py  qry.py
src/framelib/_duckdb/: __init__.py  _columns.py  _main.py  _schema.py
src/framelib/_paths/: __init__.py  _base.py  _entries.py  _files.py  _layouts.py  _requesters.py
src/framelib/_schema/: __init__.py  _base.py  _basictypes.py  _columns.py  _composedtypes.py  _main.py  _schema.py
src/framelib/_table/: __init__.py  _main.py
src/framelib/_urls/: _requesters.py
src/framelib/database/: __init__.py  _database.py
src/framelib/files/: __init__.py  _files.py
src/framelib/graphs/: __init__.py  _colors.py  _lib.py  _plots.py  _types.py
src/framelib/requests/: __init__.py  _requesters.py
src/framelib/schemas/: __init__.py  _enums.py  _lib.py  _schemas.py  _tree.py
src/framelib/stats/: __init__.py  _lib.py
src/framepaths/: __init__.py  _columns.py  _handlers.py  _lib.py  _schemas.py  _types.py
tests/: _data.py  _examples.py  _tests.py  duck  duck.db  examples.py  main.py  readme_example.py  test_composed_types.py  test_database.py  test_database_connections.py  test_filehandlers.py  test_folder.py  test_folder_tree_and_schema.py  test_misc.py  test_schema_inheritance.py  test_schemas.py  test_table.py  test_table_crud.py  tests.py
tests/data/: customers.ndjson  dataduck.ddb  sales.csv
tests/data/data_glob/customer_id=101/: 0.parquet
tests/data/data_glob/customer_id=102/: 0.parquet
tests/data/data_glob/customer_id=103/: 0.parquet
tests/data/data_glob/customer_id=104/: 0.parquet
tests/data/data_glob/customer_id=105/: 0.parquet
