[project]
authors = [
    { name = "OutSquareCapital", email = "166045166+OutSquareCapital@users.noreply.github.com" },
]
dependencies = [
    "duckdb>=1.4.1",
    "narwhals>=2.5.0",
    "polars>=1.34.0",
    "pyochain>=0.5.0",
]
description = "polars and dataframely plugin"
name = "framelib"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.42"
[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.8.15,<0.9.0"]

[tool.uv.sources]
doctester = { git = "https://github.com/OutSquareCapital/doctester.git" }

[dependency-groups]
dev = ["doctester", "marimo>=0.16.5", "pyarrow-stubs>=20.0.0.20250928"]
