[project]
    authors = [
        { name = "OutSquareCapital", email = "166045166+OutSquareCapital@users.noreply.github.com" },
    ]
    dependencies = [
        "duckdb>=1.4.1",
        "narwhals>=2.5.0",
        "polars>=1.34.0",
        "pyarrow>=14.0.0",
        "pyochain>=0.5.52",
    ]
    description = "declarative schema for files, dataframes and duckdb databases"
    name = "framelib"
    readme = "README.md"
    requires-python = ">=3.13"
    version = "0.1.44"

[tool.ruff]
    lint.ignore = [
        "C417",
        "COM812",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PLC0415",
        "PLR2004",
        "S101",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"

[tool.pydoclint]
    arg-type-hints-in-docstring                   = true
    arg-type-hints-in-signature                   = true
    check-class-attributes                        = true
    check-raises                                  = true
    check-return-types                            = true
    check-yield                                   = true
    require-arg-section                           = true
    require-return-section                        = true
    require-return-section-when-returning-nothing = false
    skip-checking-short-docstrings                = true
    style                                         = "google"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.15,<0.9.0"]


[dependency-groups]
    dev = [
        "marimo>=0.16.5",
        "pydoclint>=0.8.1",
        "pyright>=1.1.407",
        "pytest>=9.0.2",
        "ruff>=0.14.5",
    ]
